--- a/SpringProject-1/Dockerfile
+++ b/SpringProject-1/Dockerfile
@@ -1,5 +1,16 @@
-FROM openjdk:17-jdk-alpine
-COPY ./target/SpringProject-1-0.0.1-SNAPSHOT.jar /usr/app/
-WORKDIR /usr/app
-RUN sh -c 'touch SpringProject-1.0.0.1-SNAPSHOT.jar'
-ENTRYPOINT [ "java","-jar","SpringProject-1.0.0.1-SNAPSHOT.jar" ]
+# Use a lightweight JRE as the base image
+FROM openjdk:17-jre-alpine
+
+# Set the working directory
+WORKDIR /app
+
+# Copy the JAR file into the container
+COPY SpringProject-2-0.0.1-SNAPSHOT.jar app.jar
+
+# Expose the port your application will run on
+EXPOSE 8080
+
+# Command to run the JAR file
+ENTRYPOINT ["java", "-jar", "app.jar"]
+
+
